force-app/main/default/objects/Salesforce_Library_Settings__c/Salesforce_Library_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings used by Salesforce Library classes</description>
    <label>Salesforce Library Settings</label>
</CustomObject>