force-app/main/default/objects/Salesforce_Library_Settings__c/fields/Disable_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, flows will be disabled.</description>
    <inlineHelpText>If checked, flows will be disabled.</inlineHelpText>
    <label>Disable Flows</label>
    <type>Checkbox</type>
</CustomField>