force-app/main/default/objects/Salesforce_Library_Settings__c/fields/Disable_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, triggers will be disabled.</description>
    <inlineHelpText>If checked, triggers will be disabled.</inlineHelpText>
    <label>Disable Triggers</label>
    <type>Checkbox</type>
</CustomField>