force-app/main/default/objects/Salesforce_Library_Settings__c/fields/Disable_VRs__c.field-meta.xml
<CustomField>
    <fullName>Disable_VRs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, validation rules will be disabled.</description>
    <inlineHelpText>If checked, validation rules will be disabled.</inlineHelpText>
    <label>Disable Validation Rules</label>
    <type>Checkbox</type>
</CustomField>