force-app/main/default/objects/Salesforce_Library_Settings__c/fields/DisableDocumentDeletionTrigger__c.field-meta.xml
<CustomField>
    <fullName>DisableDocumentDeletionTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Documents are deleted from a Case LastModifiedDate is updated to cause EDW to pick up the new information. This flag disables that to allow for bulk deletion without EDW alerting.</description>
    <inlineHelpText>When Documents are deleted from a Case LastModifiedDate is updated to cause EDW to pick up the new information. This flag disables that to allow for bulk deletion without EDW alerting.</inlineHelpText>
    <label>Disable Document Deletion Trigger</label>
    <type>Checkbox</type>
</CustomField>