force-app/main/default/objects/Salesforce_Library_Settings__c/fields/PagerDuty_Service__c.field-meta.xml
<CustomField>
    <fullName>PagerDuty_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the ApplicationLog to PagerDuty integration will be active.</description>
    <inlineHelpText>If true, the ApplicationLog to PagerDuty integration will be active.</inlineHelpText>
    <label>PagerDuty Service</label>
    <type>Checkbox</type>
</CustomField>