force-app/main/default/objects/Salesforce_Library_Settings__c/fields/PagerDuty_Service_Email__c.field-meta.xml
<CustomField>
    <fullName>PagerDuty_Service_Email__c</fullName>
    <description>The PagerDuty service email address (used for the Application Log to Pager Duty integration)</description>
    <inlineHelpText>The PagerDuty service email address (used for the Application Log to Pager Duty integration)</inlineHelpText>
    <label>PagerDuty Service Email</label>
    <type>Email</type>
</CustomField>